# prog6_for_3_IM23_02B_IMIFI

./: .gitignore  CMakeLists.txt  README.md  base.csv  main.cpp  p.csv  test.cpp  Отчёт по групповому проекту.docx
include/: MenuManager.cpp  MenuManager.h  MenuManager.hpp  PolynomialOperations.cpp  PolynomialOperations.hpp  polynomiac_basic.cpp  polynomiac_basic.hpp  polynomiac_basic_operations.cpp
